--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,18 @@
 
 body {
   margin: 0;
-  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(to right, #2c3e50, #4ca1af);
+  background-attachment: fixed;
   color: #ecf0f1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh; /* Use height instead of min-height */
-  overflow: hidden; /* Disable all scrolling */
+  min-height: 100vh;
+  overflow-x: hidden; /* Only hide horizontal scrolling */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
